banner img name replace

--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -34,7 +34,7 @@
                     <button class="btn">Watch Live <i class="fas fa-arrow-right"></i></button>
                 </div>
                 <div class="banner-img">
-                    <img src="assets/Banner-img.png" alt="">
+                    <img src="assets/banner-img.png" alt="">
                 </div>
             </div>
         </section>
